# translate-service

./: .gitignore  LICENSE  README.md  database.py  main.py  pyproject.toml  requirements.txt  start-services.sh  tasks.py  translation.py
artifacts/: profiler_passages.json
artifacts/profiler/20260403-144322/: results.json
launchd/: local.translate-service.worker.plist
scripts/: install_launch_agent.sh  run_scheduled_worker.sh  stress_test_batch_translate.py
shared/: defaults.json  schema.sql
skills/: SKILL.md
src/: main.py  profiler.py  scheduler.py  storage.py  translate_compare_profiler.py  worker.py
src/utils/: database.py  docx.py  file_types.py  logging_utils.py  ocr.py  schema.py  shared_config.py  storage.py  translation.py  types.py
tauri-app/: README.md  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  desktop.css  index.css  languageOptions.ts  main.tsx  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/components/: DocumentDetailPanel.tsx  DocumentsTable.tsx  ImportMenuButton.tsx  ProjectSidebar.tsx  TranslationSettingsCard.tsx  WorkerScheduleCard.tsx  WorkspacePanel.tsx  app-shared.tsx
