[project]
name = "sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "huey>=2.6.0",
    "mlx>=0.31.0",
    "mlx-lm>=0.30.7",
    "numpy>=2.4.2",
    "peewee>=3.18.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.48",
    "torch>=2.10.0",
    "uvicorn>=0.38.0",
]
