[project]
name = "translate-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.68.0",
    "mlx-lm>=0.31.1",
    "persist-queue>=1.1.0",
    "sqlalchemy>=2.0.39",
]
