[project]
name = "translate-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.68.0",
    "matplotlib>=3.10.8",
    "mlx-lm>=0.31.1",
    "persist-queue>=1.1.0",
    "psutil>=7.0.0",
    "pysbd>=0.3.4",
    "python-docx>=1.2.0",
    "sqlalchemy>=2.0.39",
    "tiktoken>=0.11.0",
]
